Shenandoah: Windows build warning after JDK-8247310

XMLWordPrintable

    • gc
    • b28
    • Verified

        Windows build produces warning here after JDK-8247310:

        c:/buildbot/worker/build-jdkX-windows/build/src/hotspot/share/gc/shenandoah/shenandoahPacer.cpp(264): warning C4267: 'argument': conversion from 'size_t' to 'long', possible loss of data

        This breaks the default build, unless --disable-warnings-as-errors is specified.

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: