8247474: Shenandoah: Windows build warning after JDK-8247310

Reviewed-by: rkennke